[FEAT]: Uso de alias en peticiones de contribuidores